# parallel-numa

./: CMakeLists.txt  main.cpp  matrix_multiplication.cpp  numa_openmp.cpp  openmp_matrix_multiplication.cpp  openmp_without_numa.cpp  rbc_index.cpp  serial_access.cpp
parallel/: #mylib.cpp#  main.cpp  main.cpp~  mylib.cpp  mylib.cpp~  mylib.h  mylib.h~  numa_array.cpp  openmp_parallel.cpp  openmp_parallel.cpp~  openmp_parallel.h  openmp_parallel.h~  pthread_parallel.cpp  pthread_parallel.cpp~  pthread_parallel.h  pthread_parallel.h~
